<resources>
    <string name="app_name">Ltracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">LOGIN</string>
    <string name="contact_us">CONTACT US</string>
    <string name="contact_us_btn">Contact us</string>
    <string name="face">facebook.com/group/ltracker</string>
    <string name="tel">+48 788 574 987</string>
    <string name="meil">ltrackerteam@gmail.com</string>
    <string name="ltacker_pl">ltacker.pl</string>
    <string name="adres">Take me there!</string>
    <string name="start_race">Start race</string>
    <string name="dialog_choose_instructor">Please choose your current instructor:</string>
    <string name="cancel">Cancel</string>
    <string name="finish_race">Finish Race</string><![CDATA[

    >

    ]]>
    <string name="choose_an_instructor">Instructor</string>
    <string name="abs_always_be_careful">ABS - Always Be Careful</string>
    <string name="is_as_simple_as">is as simple as</string>
    <string name="safety">Safety</string>
    <string name="welcome">Welcome!</string>
    <string name="ltracker_2018">Ltracker 2018 ©</string>
    <string name="list_of_rides">List of rides</string>
</resources>
